<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.faleksic.pbzgoals.DetailSavingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:id="@+id/detail_app_bar"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_saving_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/goal_question"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_app_bar"
        android:id="@+id/goal_question_text_view" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frequency_spinner"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_question_text_view"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/money_per_frequency_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency_spinner"
        tools:text="250"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/dollar_sign_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dollar_sign"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/money_per_frequency_text_view"
        app:layout_constraintRight_toLeftOf="@+id/money_per_frequency_text_view"
        app:layout_constraintTop_toBottomOf="@+id/frequency_spinner" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saving_warning"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/money_per_frequency_text_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/description_text_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/ok_got_it"
        android:textColor="#FFF"
        style="AppTheme.RoundedCornerMaterialButton"
        android:background="@drawable/rounded_corner"
        android:id="@+id/agree_button"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</android.support.constraint.ConstraintLayout>
