<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.faleksic.pbzgoals.SavingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:id="@+id/saving_app_bar"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/saving_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/category_image_view"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/saving_app_bar"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toRightOf="@+id/category_image_view"
        app:layout_constraintTop_toBottomOf="@+id/saving_app_bar"
        tools:text="Title"
        app:layout_constraintRight_toLeftOf="@+id/dollar_sign_text_view"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/dollar_sign_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/dollar_sign"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/money_text_view"
        app:layout_constraintRight_toLeftOf="@+id/money_text_view"
        app:layout_constraintTop_toBottomOf="@+id/saving_app_bar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/money_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saving_app_bar"
        tools:text="500" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_text_view"
        tools:text="23/12/2018"
        android:layout_marginTop="16dp"
        android:layout_marginStart="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/donut_progress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:donut_progress="50"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/date_text_view"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/boost_button"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/remaining_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/donut_progress"
        tools:text="250"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/boost_button"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/boost_progress"
        android:textColor="#FFF"
        style="AppTheme.RoundedCornerMaterialButton"
        android:background="@drawable/rounded_corner"
        android:id="@+id/boost_button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/edit_goal_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_goal"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/boost_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="0.26" />


</android.support.constraint.ConstraintLayout>
